<resources>
    <string name="app_name">GitApp</string>
    <string name="load_users">Загрузить список пользователей</string>
    <string name="user_avatar">Аватар</string>
    <string name="public_repos">"Public repos: "</string>
    <string name="public_gists">"Public gists: "</string>
    <string name="followers">"Followers: "</string>
    <string name="following">"Following: "</string>
    <string name="no_nick_name">No nickname</string>
    <string name="no_data">Нам не удалось ничего найти :(</string>
</resources>